workshop04/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minions
  labels: 
    app: minio
    name: minio-hsvc
spec:
  clusterIP: None
  selector:
    app: minio
    name: minio-po
  ports:
  - name: server-port
    port: 9000
    targetPort: 9000
  - name: console-port
    port: 9090
    targetPort: 9090
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-sts
  namespace: minions
  labels:
    app: minio
    name: minio-sts
spec:
  selector:
    matchLabels:
      app: minio
      name: minio-po
  serviceName: minio-hsvc
  replicas: 4
  template:
    metadata:
      name: minio-po
      namespace: minions
      labels:
        app: minio
        name: minio-po
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: minio-container
        image: bitnami/minio:2024.6.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        - containerPort: 9090
        volumeMounts:
        - name: minio-pvc
          mountPath: /bitnami/minio/data
        livenessProbe:
          httpGet:
            path: /minio/health/live 
            port: 9000
        readinessProbe:
          httpGet:
            path: /minio/health/ready 
            port: 9000
        resources:
          requests:
            cpu: 200m
            memory: 250Mi
          limits:
            cpu: 200m
            memory: 250Mi
        command:
          - minio
          - server
          - --address=:9000
          - --console-address=:9090
          - http://minio-sts-{0...3}.minio-hsvc.minions.svc.cluster.local
  volumeClaimTemplates:
  - apiVersion: v1
    metadata:
      name: minio-pvc
      namespace: minions
      labels:
        app: minio
        name: minio-pvc
    spec:
      storageClassName: do-block-storage
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minions
  labels: 
    app: minio
    name: minio-svc
spec:
  type: ClusterIP
  selector:
    app: minio
    name: minio-po
  ports:
  - name: server-port
    port: 9000
    targetPort: 9000
  - name: console-port
    port: 9090
    targetPort: 9090
